tests/c_programs/switch/invalid_semantics/redefination_in_case.c
int main(void) {
    int no_body = 1;
    switch (1)
      case 1:
        ;
        int no_body = 0;

    return no_body;
}